--- a/views/admin/editOffer.ejs
+++ b/views/admin/editOffer.ejs
@@ -4,7 +4,7 @@
 
 <div class="offer-edit-container">
     <h2>Edit Offer</h2>
-    <form id="editOfferForm" action="/admin/editoffer/<%= offer._id %>" method="POST" data-offer-id="<%= offer._id %>">
+    <form id="editOfferForm"  data-offer-id="<%= offer._id %>">
         <label>Offer Name</label>
         <input type="text" id="offerName" name="name" value="<%= offer.name %>" required>
 
@@ -18,7 +18,7 @@
             <label>Select Product</label>
             <select name="productId" id="productId">
                 <% products.forEach(product => { %>
-                    <option value="<%= product._id %>" <%= offer.productId.toString() === product._id.toString() ? 'selected' : '' %>><%= product.name %></option>
+                    <option value="<%= product._id %>" <%= offer.productId && offer.productId.toString() === product._id.toString() ? 'selected' : '' %>><%= product.name %></option>
                 <% }) %>
             </select>
         </div>
@@ -43,7 +43,7 @@
         <input type="date" id="endDate" name="endDate" value="<%= offer.endDate.toISOString().split('T')[0] %>" required>
   
         <button type="submit">Update Offer</button>
-        <button><a href="/admin/getoffers">Exit</a></button>
+        <button><a href="/admin/offers">Exit</a></button>
     </form>
 </div>
 
@@ -116,9 +116,9 @@
         }
 
         try {
-            console.log("Sending request to server...", offerData);
-            let response = await fetch(`/admin/editoffer/${offerId}`, {
-                method: "POST",
+           // console.log("Sending request to server...", offerData);
+            let response = await fetch(`/admin/offers/${offerId}/edit`, {
+                method: "PUT",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify(offerData)
             });
@@ -132,7 +132,7 @@
                     icon: "success",
                     confirmButtonText: "OK"
                 }).then(() => {
-                    window.location.href = "/admin/getoffers";
+                    window.location.href = "/admin/offers";
                 });
             } else {
                 console.error("Error Response:", result);
