--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -108,7 +108,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<li><a class="color1" href="/products">Catalog</a>
 				
 		
-			<li><a class="color1" href="/contactus">Contact Us</a>
+			<li><a class="color1" href="/contact">Contact Us</a>
 				
 			</li>				
 			<li><a  class="color1" href="/about">About Us</a>
