--- a/views/partials/user/ordersList.ejs
+++ b/views/partials/user/ordersList.ejs
@@ -46,7 +46,7 @@
                             <td><%= order.orderStatus %></td>
                             <td>₹<%= order.totalAmount.toFixed(2) %></td>
                             <td>
-                                <a href="/order/<%= order._id %>">View Details</a>
+                                <a href="/orders/<%= order._id %>">View Details</a>
                             </td>
                         </tr>
                     <% }) %>
