--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -36,7 +36,7 @@
 									<h1>Unleash Your Inner Sparkle</h1>
 									<p>Discover our exquisite collection of handcrafted jewelry that celebrates your unique style and transforms every moment into a cherished memory</p>
 									<div class="buy">
-										<a href="single.html">Explore</a>
+										<a href="/products">Explore</a>
 									</div>
 								</div>
 							</div>
@@ -49,7 +49,7 @@
 									<h1>A piece of jewelry is like a story waiting to be told</h1>
 									<p>Jewelry is the perfect way to express your personality without saying a word.</p>
 									<div class="buy">
-										<a href="single.html">Explore</a>
+										<a href="/products">Explore</a>
 									</div>
 								</div>
 							</div>
@@ -62,7 +62,7 @@
 									<h1>Embrace Timeless Beauty</h1>
 									<p>Delve into our carefully curated selection of timeless pieces that capture the essence of elegance and individuality..</p>
 									<div class="buy">
-										<a href="single.html">Explore</a>
+										<a href="/products">Explore</a>
 									</div>
 								</div>
 							</div>
@@ -145,7 +145,7 @@
 				<p>"Let your inner radiance shine through with our meticulously designed jewels" 
 				<span>tradition, innovation, and passion, crafted to elevate your style and inspire a lifetime of graceful moments</span></p>
 				<div class="buy let">
-					<a href="single.html">Read More</a>
+					
 				</div>
 			</div>
 		</div>
@@ -159,7 +159,7 @@
 				<p class="non">In every shimmering gem and masterfully crafted piece<span>we capture fleeting moments of beauty</span></p>
 				<p class="rep">transform them into timeless treasures</p>
 				<div class="buy wel">
-					<a href="single.html">Read More</a>
+				
 				</div>
 			</div>
 		</div>
@@ -232,14 +232,14 @@
 				<div class="col-md-2 product-left"> 
 					<div class="p-one simpleCart_shelfItem jwe">							
 							<a href="single.html">
-								<img src="images/1-.jpg" alt="" class="img-responsive" />
+								<img src="images/home19.webp" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+									
 								</div>
 							</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹800</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -253,12 +253,12 @@
 						<a href="single.html">
 								<img src="images/home5.webp" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+									
 								</div>
 						</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹900</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -272,12 +272,12 @@
 						<a href="single.html">
 								<img src="images/home4.webp" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+									
 								</div>
 						</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹570</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -291,12 +291,12 @@
 						<a href="single.html">
 								<img src="images/home9.webp" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+									
 								</div>
 						</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹769</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -310,12 +310,12 @@
 							<a href="single.html">
 								<img src="images/home2.webp" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+									
 								</div>
 							</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹890</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -329,12 +329,12 @@
 						<a href="single.html">
 								<img src="images/home1.webp" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+									
 								</div>
 						</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹700</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -351,12 +351,12 @@
 							<a href="single.html">
 								<img src="images/7-.jpg" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+								
 								</div>
 							</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹654</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -370,12 +370,12 @@
 						<a href="single.html">
 								<img src="images/13-.jpg" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+								
 								</div>
 						</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹450</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -389,12 +389,12 @@
 						<a href="single.html">
 								<img src="images/9-.jpg" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+									
 								</div>
 						</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹350</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -408,12 +408,12 @@
 						<a href="single.html">
 								<img src="images/10-.jpg" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+								
 								</div>
 						</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹235</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -432,7 +432,7 @@
 							</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹500</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
@@ -446,12 +446,12 @@
 						<a href="single.html">
 								<img src="images/12-.jpg" alt="" class="img-responsive" />
 								<div class="mask">
-									<span>Quick View</span>
+									
 								</div>
 						</a>
 						<div class="product-left-cart">
 							<div class="product-left-cart-l">
-								<p><a class="item_add" href="#"><i></i> <span class=" item_price">$729</span></a></p>
+								<p><a class="item_add" href="#"><i></i> <span class=" item_price">₹535</span></a></p>
 							</div>
 							<div class="product-left-cart-r">
 								<a href="#"> </a>
