--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -20,7 +20,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					 <h3>Login</h3>
 					 <div class="strip"></div>
 					 <p>Welcome, please enter the following to continue.</p>
-					 <p>If you have previously Login with us, <a href="#">Click Here</a></p>
+					 <p><a href="#"></a></p>
 					 <form method="post" action="/login">
 						 <h5>Email :</h5>	
 						 <input type="text" value="" name="email" id="email" required>
@@ -34,7 +34,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</a>
 						</div>
 					 </form>
-					<a href="/forgot_password">Forgot Password ?</a>
+					<a href="/password/forgot">Forgot Password ?</a>
 			</div>
 			<div class="col-md-6 login-right">
 					<h3>New Registration</h3>
