--- a/views/user/reset_Password.ejs
+++ b/views/user/reset_Password.ejs
@@ -10,7 +10,7 @@
             <div class="alert alert-danger"><%= message %></div>
         <% } %>
 
-        <form method="POST" action="/reset_password" onsubmit="return validatePasswordForm()">
+        <form method="POST" action="/password/reset" onsubmit="return validatePasswordForm()">
             <div class="mb-3">
                 <input class="form-control" name="password" placeholder="New Password" type="password" id="password">
                 <div class="error-message" id="passwordError"></div>
