--- a/views/admin/offerManagement.ejs
+++ b/views/admin/offerManagement.ejs
@@ -6,7 +6,7 @@
     </div>
 
     <div class="header-actions">
-        <a href="/admin/addoffer" class="btn btn-primary"><i class="fas fa-plus"></i> Add Offer</a>
+        <a href="/admin/offers/add" class="btn btn-primary"><i class="fas fa-plus"></i> Add Offer</a>
     </div>
 
     <div class="offer-container mt-4">
@@ -48,7 +48,7 @@
                                 <!--<button class="btn btn-warning btn-sm edit-offer" >-->
                                  
                                
-                                <a href="/admin/editoffer/<%= offer._id %>" class="btn btn-warning btn-sm action-btn">
+                                <a href="/admin/offers/<%= offer._id %>/edit" class="btn btn-warning btn-sm action-btn">
                                     <i class="fas fa-edit"></i> Edit
                                 </a>
                            
@@ -79,10 +79,10 @@
         button.addEventListener("click", function () {
             const offerId = this.getAttribute("data-id");
             const newStatus = this.getAttribute("data-status");
-            const actionUrl = newStatus === "inactive" ? `/admin/disableoffer/${offerId}` : `/admin/enableoffer/${offerId}`;
+            const actionUrl = newStatus === "inactive" ? `/admin/offers/${offerId}/disable` : `/admin/offers/${offerId}/enable`;
 
             fetch(actionUrl, {
-                method: "POST",
+                method: "PATCH",
                 headers: { "Content-Type": "application/json" }
             })
             .then(response => response.json())
