--- a/views/admin/viewproduct.ejs
+++ b/views/admin/viewproduct.ejs
@@ -20,7 +20,7 @@
             </td>
         </tr>
     </table>
-    <a href="/admin/getproduct" class="btn-back">Back</a>
+    <a href="/admin/products" class="btn-back">Back</a>
 </div>
 
 
