--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -65,7 +65,7 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin/category">
+                    <a class="menu-link" href="/admin//categories">
                         <i class="icon material-icons md-category"></i> Category Management
                     </a>
                 </li>
@@ -75,23 +75,23 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin/getproduct">
+                    <a class="menu-link" href="/admin/products">
                         <i class="icon material-icons md-shopping_bag"></i> Products Management
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin/getoffers">
+                    <a class="menu-link" href="/admin/offers">
                         <i class="icon material-icons md-local-offer"></i> Offer Management
                     </a>
                 </li>
                 
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin/getorders">
+                    <a class="menu-link" href="/admin/orders">
                         <i class="icon material-icons md-shopping_cart"></i> Orders Management
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin/getSales">
+                    <a class="menu-link" href="/admin/dashboard/sales">
                         <i class="icon material-icons md-shopping_cart"></i> Report 
                     </a>
                 </li>
