--- a/views/user/addaddress.ejs
+++ b/views/user/addaddress.ejs
@@ -70,7 +70,7 @@
     let formData = { houseNumber, street, city, state, pincode };
 
     try {
-        const response = await fetch("/addnewaddress", {
+        const response = await fetch("/addresses/new", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify(formData)
@@ -80,7 +80,7 @@
 
         if (data.success) {
             messageDiv.innerHTML = `<span style="color: green;">Address added successfully!</span>`;
-            setTimeout(() => { window.location.href = "/addnewaddress"; }, 3500);
+            setTimeout(() => { window.location.href = "	/addresses/new"; }, 3500);
         } else {
             messageDiv.innerHTML = `<span style="color: red;">${data.message}</span>`;
         }
